# ai-learn

./: .gitignore  AGENTS.md  BACKLOG.md  BACKLOG.ru.md  CLAUDE.md  CURRICULUM.md  CURRICULUM.ru.md  DEEP_RESEARCH_PROMPT.md  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE.ru.md  PROGRESS.md  PROGRESS.ru.md  PROJECT_OVERVIEW.md  README.md  README.ru.md  ROADMAP_VIEW_MODE.md  ROOMS_IDEAS.md  SERVICE_IMPROVEMENTS.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
.claude/: launch.json
.gemini/: GEMINI.md
backend/: =1.40.0  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  settings.py
backend/.next/: trace  trace-build
backend/.next/cache/: .previewinfo  .rscinfo
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2026_02_24_1129-ea8284351669_initial_tables.py  2026_04_04_1910-8f3b2c1d9a11_agent_ops_tables.py
backend/app/: database.py  main.py
backend/app/api/: exceptions.py
backend/app/api/agent/: __init__.py  router.py  schemas.py
backend/app/api/auth/: handlers.py  router.py  schemas.py
backend/app/api/dependencies/: __init__.py  db_session.py  user.py
backend/app/api/labs/: router.py  schemas.py
backend/app/api/progress/: router.py  schemas.py
backend/app/api/users/: router.py  schemas.py
backend/app/db/models/: __init__.py  agent_ops.py  auth_session.py  base_model.py  progress.py  users.py
backend/app/db/repositories/: auth_sessions.py  progress.py  repository_base.py  users.py
docs/: AGENTS.md  AGENT_PROMPTS.md  BACKLOG.md  BACKLOG.ru.md  CLAUDE.md  CURRICULUM.md  CURRICULUM.ru.md  (+26 more)
(+206 files in other folders)
